--- a/ruby/cloudevent/manifest.yaml
+++ b/ruby/cloudevent/manifest.yaml
@@ -1,2 +1,4 @@
 builders:
-  default: paketobuildpacks/builder:full
+  default: paketobuildpacks/builder:base
+  base: paketobuildpacks/builder:base
+  full: paketobuildpacks/builder:full
